[project]
name = "streamlit-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Ritesh Raj",email = "rajritesh03@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.50.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
